feat: added sensible docs, mn!

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ SRC_DIR := .
 REPORTS_DIR := coverage-reports
 
 build:
-	@go build -ldflags "-s -w" -o $(BIN_DIR)/main $(SRC_DIR)/main.go
+	@go build -ldflags "-s -w" -o $(BIN_DIR)/leechy $(SRC_DIR)/main.go
 
 run:
 	@go run $(SRC_DIR)/main.go
@@ -12,7 +12,10 @@ test:
 	@go test -v ./...
 
 clean:
-	@rm -rf $(BIN_DIR)/* $(REPORTS_DIR)/*
+	@rm -rf $(BIN_DIR)/*
+
+clean-coverage:
+	@rm -rf $(REPORTS_DIR)/*
 
 coverage:
 	@# Create reports directory if it doesn't exist 
