--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.22'
 
     - name: Build
-      run: go build -v ../../src/...
+      run: pwd && go build -v ../../src/...
 
     - name: Test
       run: go test -v ../../src/...
